# mocha

./: Cargo.toml
core/: Cargo.toml
core/src/: application.rs  component.rs  event.rs  layer.rs  layout.rs  lib.rs  renderer.rs  style.rs  tree.rs  window.rs
platform/: Cargo.toml
platform/shaders/: quad.glsl
platform/src/: execute.rs  lib.rs
platform/src/graphics/: backend.rs  buffer.rs  lib.rs  maths.rs  mod.rs  program.rs  renderer.rs  shader.rs
platform/src/window/: window.rs
src/: main.rs
