[package]
name = "mocha-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mocha-core = {path = "../core"}
winit = "0.27.5"
raw-window-handle = "0.5.0"
glutin = "0.30.3"
glutin-winit = "0.2.1"
bytemuck = "1.12.3"
glow = "0.11.2"